tests/baselines/reference/iteratorsAndStrictNullChecks.errors.txt
tests/cases/compiler/iteratorsAndStrictNullChecks.ts(3,5): error TS2823: This expression refers to function. Did you mean to call it instead?


==== tests/cases/compiler/iteratorsAndStrictNullChecks.ts (1 errors) ====
    // for..of
    for (const x of ["a", "b"]) {
        x.substring;
        ~~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
    }
    
    // Spread
    const xs = [1, 2, 3];
    const ys = [4, 5];
    xs.push(...ys);
    